<?xml version="1.0"?>
<package format="2">
  <name>my_robot_description</name>
  <version>0.0.1</version>
  <description>A package for the robot description</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rviz</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>

